# Antihack

./: .gitignore  Antihack.sln  DOCUMENTATION.md  StreamClient_final.py  StreamClient_new.py  StreamServerGUI.py  StreamServerGUI_final.py  config.ini
Antihack/: AntiCheat.csproj  AntiCheatForm.Designer.cs  AntiCheatForm.cs  Antihack.csproj  AntihackForm.Designer.cs  AntihackForm.cs  AntihackForm.resx  App.config  Program.cs  packages.config
Antihack/Core/: AntiCheatCore.sln  AntiCheatCore.vcxproj  AntiCheatCore.vcxproj.filters  CMakeLists.txt
Antihack/Core/examples/: main.cpp
Antihack/Core/include/: anticheat_core.h  stdafx.h
Antihack/Core/include/internal/: AntiCheatEngine.h  AntiCheatEngineV2.hpp  CheatSignatures.h  ConfigParser.hpp  EncryptionLib.h  EncryptionLibV2.hpp  EventBus.hpp  FileProtection.h  FileProtectionV2.hpp  HWIDCollector.h  HandleGuard.hpp  HookDetector.h  IConfigurable.hpp  IMonitorModule.h  IPCManager.h  MacroDetector.h  MemoryPatcher.h  ModuleTypes.hpp  OverlayDetector.h  ProcessMonitor.h  ProcessMonitorV2.hpp  SelfProtection.h  common.h  platform.h
Antihack/Core/src/: AntiCheatEngine.cpp  AntiCheatEngineV2.cpp  CheatSignatures.cpp  ConfigParser.cpp  EncryptionLib.cpp  EncryptionLibV2.cpp  EventBus.cpp  FileProtection.cpp  FileProtectionV2.cpp  HWIDCollector.cpp  HookDetector.cpp  IPCManager.cpp  MacroDetector.cpp  MemoryPatcher.cpp  OverlayDetector.cpp  ProcessMonitor.cpp  ProcessMonitorV2.cpp  SelfProtection.cpp  antidebug.cpp  antimacro.cpp  core.cpp  detection.cpp  encryption.cpp  file_protection.cpp  hooks.cpp  integrity.cpp  ipc.cpp  memory_scan.cpp
Calculador_CRC/: Calculador_CRC.vcxproj
Dll1/: Dll1.vcxproj  dllmain.cpp
Encode_Decode/: Encode_Decode.csproj
EncryptionTool/: EncryptionTool.vcxproj
(+55 files in other folders)
